--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -40,6 +40,16 @@
 				<h2 class="h1">Обновления Special</h2>
 			</div>
 			<div class="fs-5 mb-5">
+				<p class="text--more fs-3"> 06.05.2023</p>
+				<ul>
+					<li>Добавлен шаблон для нового дизайна</li>
+					<li>Редактирование дизайна</li>
+					<li>Редактирование статичных страниц</li>
+					<li>Переводы сайта закрыты на время</li>
+					<li>Новые подборки статей.</li>
+				</ul>
+			</div>
+			<div class="fs-5 mb-5">
 				<p class="text--more fs-3"> 01.05.2023</p>
 				<ul>
 					<li>Исправление ошибок</li>
@@ -121,7 +131,7 @@
 			</div>
 			<div class="fs-5 mb-5">
 				<p class="text--more fs-3"> 15.01.23</p>
-				<p>выход в продакшен.</p>
+				<p>Выход в продакшен.</p>
 			</div>
 		</main>
 
