--- a/src/html/write-post.html
+++ b/src/html/write-post.html
@@ -39,82 +39,111 @@
         </div>
 
         <div class="fs-5 mb-5">
-
             <p>
-                У любого пользователя есть возможность получить его опубликованную статью на
-                сайте <a href="//news.dybka.ru" class="link">news.dybka.ru</a>
-                , если соблюдены правила публикации, о которых дальше пойдет речь.
+                Special — это прекрасное медиа сообщество, которое собирает людей вокруг интересующих их направлений: техника,
+                программирование, дизайн и многое другое. Станьте автором новой прекрасной статьи на сайте медиа Special.
             </p>
         </div>
         <div class="fs-5 mb-5">
-            <h2>Стать автором</h2>
+            <h2>Как написать статью</h2>
             <p>
-                Вам следует написать статью с названием (заголовком), коротким описанием,
-                основным содержанием (текстом) и изображением.
+                Напиши статью для сайта медиа Special в любом удобном для вас месте. Как именно вы будете писать статью и
+                на каком устройстве — все это не играет роли. Пишите там, где вам удобно.
             </p>
-            <a href="/img/content/example_top.jpg" target="_blank" aria-label="Открыть изображение в новом окне">
-                <img src="/img/content/example_top.jpg" class="default-border-image img-fluid shadow-sm mb-4 mt-1 col-md-10" alt="Формат записи">
-            </a>
+        </div>
+        <div class="fs-5 mb-5">
+            <h2>Проверить статью</h2>
             <p>
-                Формат записи:
+                Перед тем, как отправить статью на модерацию, вы должны убедиться, что статья соответствует требованиям
+                сайта медиа Special. Проверьте следующее:
             </p>
             <ul>
                 <li>
-                    Название (заголовок) не должен превышать 90-ста символов и обязателен.
+                    Статья не является рекламой
                 </li>
                 <li>
-                    Короткое описание не должно превышать 42-х символов и не обязательно.
+                    Статья не несет цели обмануть
                 </li>
                 <li>
-                    Изображение записи должно быть разрешением 1200:600 и соотношением сторон 2:1 соответственно,
-                    обязательно к записи.
+                    Статья не написана нейросетью или об этом указано в конце статьи
                 </li>
                 <li>
-                    Текст записи может быть любым по размеру, обязателен к записи.
+                    Статья не нарушает правила РФ
+                </li>
+                <li>
+                    Статья не продвигает запрещенные темы
+                </li>
+                <li>
+                    Статья не содержит враждебных высказываний
+                </li>
+                <li>
+                    Статья не содержит мата
+                </li>
+                <li>
+                    Статья не разжигает нанависть.
                 </li>
             </ul>
         </div>
         <div class="fs-5 mb-5">
-            <h2>Как опубликовать статью?</h2>
+            <h2>Содержание статьи</h2>
             <p>
-                Для публикации статьи следует направить приложенный материал к письму на почту:
-                <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
-                Приложенная статья будет рассмотрена, после рассмотрения Вам будет
-                прислан ответ.
+                Статья для сайта медиа Special должна содержать следующие пункты:
+            </p>
+            <ul>
+                <li>
+                    Заголовок: до 90 символов
+                </li>
+                <li>
+                    Короткое описание: до 42 символов
+                </li>
+                <li>
+                    Изображение записи: разрешение 1200x600
+                </li>
+                <li>
+                    Основной текст записи.
+                </li>
+            </ul>
+            <p>
+                По желанию в статью вы можете включить дополнительные изображения.
             </p>
         </div>
         <div class="fs-5 mb-5">
-            <h2>Запрещенные темы</h2>
+            <h2>Как отправить статью на модерацию</h2>
             <p>
-                На сайте Special запрещено выкладывать материалы с ненормативной лексикой, оскорблениями,
-                разжиганием ненависти. На обсуждение запрещены: темы войны, темы религии, «острые» темы и прочие,
-                которые могут вызвать общих негатив у людей.
+                Для публикации статьи вам требуется отправить статью на модерацию. Для отправки статьи на модерацию
+                вам требуется удобным способом направить статью на почту: <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
+                В теме письма укажите: «Публикация статьи на сайте медиа Special». Учтите, что статья должна соответствовать правилам
+                сайта медиа Special.
             </p>
+        </div>
+
+        <div class="fs-5 mb-5">
+            <h2>Страница статьи</h2>
             <p>
-                Для публикации запрещены рекламные посты без согласования модераторов на их публикацию.
-                Любое наличие рекламных отображений и прочего будет являться причиной для отказа
-                публикации материала.
+                Подобным образом будет выглядеть страница статьи. Пожалуйста, учтите, что представленный макет
+                является макетом для старого дизайна страницы. На текущий момент все публикуемые статьи будут публиковаться
+                в новом дизайне. Требования для публикации будут указаны позже.
             </p>
-            <p>
-                Все публикуемые посты проходят проверку модераторами. Опубликовать пост без согласия
-                модераторов не предоставляется возможным.
-            </p>
+            <a href="/img/content/example_top.jpg" target="_blank" aria-label="Открыть изображение в новом окне">
+                <img src="/img/content/example_top.jpg" class="default-border-image img-fluid shadow-sm mb-4 mt-1 col-md-10"
+                    alt="Формат записи">
+            </a>
         </div>
         <div class="fs-5 mb-5">
             <h2>Страница автора</h2>
             <p>
-                Если вашу статью одобрили к публикации — для вас будет создана странциа автора.
-                вас попросят прислать вашу фотографию, которая будет приложена к странице автора.
-                Важно: фотография может быть только вашего лица, другие фотографии не принимаются.
-                По умолчанию будет стоять фотография с вашими инициалами: имени и фамилии.
+                После успешно опубликованной статьи вам будет предложено создать страницу автора. При вашем согласии
+                вам нужно будет предоставить данные о вашем имени, фамилии и вашей фотографии (по желанию). В противном
+                случае, вы не будете подписаны как автор статьи. Изменить автора статьи после ее публикации не
+                представляется возможным.
             </p>
             <a href="/img/content/example_author_page.jpg" target="_blank" aria-label="Открыть изображение в новом окне">
                 <img src="/img/content/example_author_page.jpg" class="default-border-image img-fluid shadow-sm mb-4 mt-1 col-md-10"
                     alt="Формат страницы автора">
             </a>
         </div>
-        <p>
-            Актуальность на 19.03.2023.
+        <p class="fs-3">
+            Информация отредактирована 6 мая 2023 года (06.05.2023).
         </p>
     </main>
 
