delete example and about

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -110,7 +110,7 @@
 			<div class="fs-5 mb-5">
 				<h2>Реклама на сайте</h2>
 				<p>
-					Медиа Special не располагает размещением рекламных ваканский на
+					Медиа Special не располагает размещением рекламных предложений на
 					сайте медиа Special. Но, тем не менее, у вас есть возможность обратиться
 					с рекламным предложением на адрес: <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
 					Любые рекламные предложения, нарушающие законодательство РФ, будут отклонены.
@@ -132,7 +132,7 @@
 						перед публикацией статьи были пройдены успешно —
 						она отправляется в список на публикацию. Через некоторое
 						время статья будет размещена на сайте и других ресурсах
-						медиа Special
+						медиа Special.
 					</p>
 				</div>
 				<div class="mb-5">
@@ -144,7 +144,7 @@
 					</p>
 					<p>
 						На сайте медиа Special не используется форм-регистрации, от пользователя
-						не требуется вводить какое-либо содержимое. Благодаря чему полностью исключены
+						не требуется вводить какие-либо данные. Благодаря чему полностью исключены
 						«взломы» и «утечки данных».
 					</p>
 				</div>
