--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -108,6 +108,11 @@
             </div>
         </div>
     </div>
+    <div class="container container--main footer--bottom-info">
+        <p>
+            © «Special», 2023
+        </p>
+    </div>
 </footer>
 
 <script src="/js/theme.js"></script>
