add new posts and animation

--- a/src/parts/p--articles.html
+++ b/src/parts/p--articles.html
@@ -1,6 +1,22 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
+            <a href="/p/php-is-alive/" class="card card--link card--rounded border-0">
+                <img src="/img/postsmin/p018.jpg" class="card-img" alt="Логотип PHP">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">PHP ЖИВ?</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/tech/airpods-pro-is-it-worth-the-money" class="card card--link card--rounded border-0">
+                <img src="/img/postsmin/p019.jpg" class="card-img" alt="Наушники AirPods Pro">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">AirPods Pro — стоит потратиться?</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
             <a href="/tech/macbook-2017-review" class="card card--link card--rounded border-0">
                 <img src="/img/postsmin/p013.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
                 <div class="card-img-overlay card--bg-gradient d-flex">
