--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -1,11 +1,10 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
         <div class="col pb-3 mb-sm-0">
-            <a href="/updates/news-archive-share-design-update" class="card card--link card--rounded border-0">
-                <img src="/img/updates/update004.jpg" loading="lazy" class="card-img" alt="Главная страница медиа Special">
+            <a href="/tech/airpods-pro-is-it-worth-the-money" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p019/cap.jpg" loading="lazy" class="card-img" alt="Наушники AirPods Pro">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-1">Архив новостей. «Поделиться». Обновление
-                        дизайна</p>
+                    <p class="card-title text-white mt-auto card--title card--title-1">AirPods Pro — стоит потратиться?</p>
                 </div>
             </a>
         </div>
@@ -14,6 +13,14 @@
 
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
+        <div class="col pb-3 mb-sm-0">
+            <a href="/p/php-is-alive/" class="card card--link card--rounded border-0">
+                <img src="/img/postsmin/p018.jpg" class="card-img" alt="Логотип PHP">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">PHP ЖИВ?</p>
+                </div>
+            </a>
+        </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/which-macbooks-are-really-worth-getting" class="card card--link card--rounded border-0">
                 <img src="/img/postsmin/p014.jpg" class="card-img" alt="Два макбука на столе">
