--- a/src/parts/p--tech.html
+++ b/src/parts/p--tech.html
@@ -9,6 +9,14 @@
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
+            <a href="/tech/airpods-pro-is-it-worth-the-money" class="card card--link card--rounded border-0">
+                <img src="/img/postsmin/p019.jpg" class="card-img" alt="Наушники AirPods Pro">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">AirPods Pro — стоит потратиться?</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
             <a href="/tech/difference-in-macbooks-for-3-years" class="card card--link card--rounded border-0">
                 <img src="/img/postsmin/p017.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
                 <div class="card-img-overlay card--bg-gradient d-flex">
