--- a/src/parts/p--post-newdesign-title.html
+++ b/src/parts/p--post-newdesign-title.html
@@ -347,9 +347,9 @@
                             Поделиться
                         </a>
                     </div>
-                    <div class="text-white">
+                    <div class="text-white text-image-show">
                         <a onClick="SetActiveImagePost()" href="#imagepost" role="button" aria-expanded="false" aria-controls="mediashare"
-                            class="link-white">
+                            class="link-white text-image-show">
                             Изображение
                         </a>
                     </div>
@@ -358,12 +358,6 @@
         </div>
     </div>
 </div>
-
-<!-- <div class="post--more-image post--more-image-show" id="block_imagepost">
-    <div class="container">
-        <img src="/img/@@imagepost" class="img-fluid w-100" id="imagepost" alt="@@alt">
-    </div>
-</div> -->
 
 <div class="container">
     <figure class="post--more-image post--more-image-show text-center" id="block_imagepost">
