Add metrika. And change the view

--- a/src/parts/p--games.html
+++ b/src/parts/p--games.html
@@ -1,6 +1,14 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
+            <a href="/games/russian-cards-2/" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p020.jpg" class="card-img" alt="Шапка игры Русские Карты 2">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Русские Карты 2</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
             <a href="/games/babkaonthehuntclassic" class="card card--link card--rounded border-0">
                 <img src="/img/postsmin/g001.jpg" loading="lazy" class="card-img" alt="Мобильная игра Babka On The Hunt">
                 <div class="card-img-overlay card--bg-gradient d-flex">
