--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -16,7 +16,70 @@
     </div>
 </nav>
 
-<footer role="contentinfo" class="footer--main">
+<footer class="container footer--main">
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3">
+        <div class="col-md-3 mb-4  me-auto">
+            <a href="/" aria-label="Перейти на главную страницу"
+                class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon header--logo" viewBox="0 0 1211.79 303.25">
+                    <path
+                        d="M877.07 167.05a62 62 0 0 1-13.94 31.84 76.34 76.34 0 0 1-29.5 21.48q-18 7.65-40.24 7.65-25.17 0-44.3-9.26t-29.87-26q-10.74-16.78-10.74-38.5 0-22 10.74-38.63t29.87-26.05q19.13-9.37 44.3-9.38 22.22 0 40.24 7.78a78.08 78.08 0 0 1 29.5 21.47 61.56 61.56 0 0 1 13.94 32h-41.22q-3.21-14.31-14.69-22.09t-27.77-7.78q-13.08 0-22.83 5.06a34.94 34.94 0 0 0-14.93 14.57q-5.19 9.5-5.19 23.08 0 13.32 5.19 22.83a34.86 34.86 0 0 0 14.93 14.56q9.75 5.07 22.83 5.06 16.55 0 28-8.14a34.85 34.85 0 0 0 14.44-21.48ZM919.79 67.82q-11.12 0-18.14-5.8a19 19 0 0 1-7-15.43q0-9.87 7-15.67t18.14-5.8q11.34 0 18.26 5.8t6.92 15.67q0 9.63-6.92 15.43t-18.26 5.8ZM899.3 82.39l20.49 3.94 20.73-3.94v141.93h-41.23ZM1111.08 154.22q-4 22.22-14.44 38.87a75.44 75.44 0 0 1-26.41 25.8 70.51 70.51 0 0 1-35.67 9.13q-20.49 0-36.29-9.26a63.79 63.79 0 0 1-24.56-25.91q-8.76-16.67-8.76-38.63 0-22.21 8.76-38.88a63.75 63.75 0 0 1 24.56-25.92q15.8-9.25 36.29-9.26a70.41 70.41 0 0 1 35.67 9.14 76.41 76.41 0 0 1 26.56 25.79q10.59 16.66 14.29 39.13Zm-104.42 0a45 45 0 0 0 5.07 21.72 37.4 37.4 0 0 0 13.94 14.68 39.18 39.18 0 0 0 20.49 5.31 46.79 46.79 0 0 0 21.84-5.31 59.24 59.24 0 0 0 18.15-14.68 70.51 70.51 0 0 0 12.34-21.72 72.12 72.12 0 0 0-12.34-21.85 58.68 58.68 0 0 0-18.15-14.81 46.79 46.79 0 0 0-21.84-5.31 39.18 39.18 0 0 0-20.49 5.31 37.29 37.29 0 0 0-13.94 14.81 45.73 45.73 0 0 0-5.07 21.85Zm93.56 70.1-5.93-51.34 6.67-18.76-6.67-18.54 5.93-51.83h42.7l-8.13 70.37 8.14 70.1ZM1170.57 34.25h41.22v190.07h-41.22Z" />
+                    <path
+                        d="M453.47 116.76a39.24 39.24 0 0 0-20.49-5.3 47.62 47.62 0 0 0-22 5.3 56.79 56.79 0 0 0-18.15 14.81 73.78 73.78 0 0 0-12.22 21.85 72 72 0 0 0 12.22 21.72 57.34 57.34 0 0 0 18.15 14.69 47.5 47.5 0 0 0 22 5.3 39.14 39.14 0 0 0 20.49-5.3 37.45 37.45 0 0 0 14-14.69 45.06 45.06 0 0 0 5.06-21.72 45.84 45.84 0 0 0-5.06-21.85 37.31 37.31 0 0 0-14-14.81Z"
+                        class="cls-1" />
+                    <path
+                        d="M530.98 152.93q0-22 10.73-38.51a72.77 72.77 0 0 1 29.5-25.8q18.76-9.26 42.71-9.25 24.43 0 42 10.73a70.28 70.28 0 0 1 25 26.47L907.49.5H171.65L.86 302.75h316.62L540.2 188.68q-9.2-15.68-9.22-35.75Zm-225.49 45q-11.24 14-31.47 21.6t-47.4 7.65q-27.65 0-48.62-8t-33.08-22.46a55.49 55.49 0 0 1-13.08-33.69h42.45a29.92 29.92 0 0 0 8.27 16.41q6.79 7 18.27 10.86a83.93 83.93 0 0 0 26.54 3.83q22 0 34.68-6.3t12.74-17.63a15.49 15.49 0 0 0-7.28-13.7q-7.29-4.8-27-7l-37.28-4.2q-36-3.95-52.2-16.91T134.79 92.2q0-18.25 10.74-31.1t30.26-19.62q19.48-6.8 45.9-6.8 25.67 0 45.66 7.53t31.85 21a50.56 50.56 0 0 1 12.83 31.47h-42.46a24.91 24.91 0 0 0-7.28-14.19q-6-6-16.66-9.38a83.59 83.59 0 0 0-24.93-3.34q-20 0-31.84 5.93t-11.85 16.78a14.56 14.56 0 0 0 7 13q7 4.58 24.81 6.79l38.76 4.69q25.66 2.72 40.85 8.76t21.72 16.17q6.54 10.13 6.54 25.67a50.19 50.19 0 0 1-11.2 32.41Zm199.82-5.92a64.88 64.88 0 0 1-24.52 25.96q-15.68 9.26-36.41 9.25-19.75 0-35.42-9.13a77 77 0 0 1-26.29-25.79c-.17-.27-.33-.56-.5-.83v72.78h-41.26V83.07h41.22v31.85c.13-.21.25-.42.37-.63a75.44 75.44 0 0 1 26.42-25.79 69.88 69.88 0 0 1 35.42-9.13q20.73 0 36.41 9.25a64.88 64.88 0 0 1 24.56 25.92q8.88 16.67 8.88 38.88 0 21.97-8.88 38.63Z"
+                        class="cls-1" />
+                    <path
+                        d="m576.79 169.92 7.15-3.67h-8.56c.41 1.26.87 2.48 1.41 3.67ZM634.4 114.42a41.73 41.73 0 0 0-20.24-4.69q-12.58 0-21.84 5.06A35.65 35.65 0 0 0 578 128.86a37.86 37.86 0 0 0-3.84 10h63.24l12.94-6.63a38.2 38.2 0 0 0-2.24-4.48 35 35 0 0 0-13.7-13.33Z"
+                        class="cls-1" />
+                    <path
+                        d="M627.27 196.92q-17.52 0-29.86-5.43a39.27 39.27 0 0 1-21.52-21.12l-36.61 18.75c.71 1.22 1.43 2.43 2.22 3.6q11.22 16.8 30.85 26t44.56 9.26a133.84 133.84 0 0 0 38.88-5.51 109.66 109.66 0 0 0 32.22-15.43v-27.65a104.68 104.68 0 0 1-28.88 13 115.77 115.77 0 0 1-31.86 4.53ZM680.02 117.02l-30.55 15.66a45.76 45.76 0 0 1 2.36 7h-16l-53.48 27.4h109.33q0-26.4-9.5-45.91c-.67-1.44-1.39-2.8-2.16-4.15Z" />
+                </svg>
+            </a>
+            <p class="footer--text-copyright">Медиа сообщество на тему программирования.</p>
+            <div style="margin-top: 90px;">
+                daniil@dybka.ru
+            </div>
+        </div>
+
+        <div class="col mb-4">
+            <h4 class="footer--text-head mb-2" style="padding-left: 17px;">Посты</h4>
+            <ul class="nav flex-column">
+                <li class="nav-item mb-2"><a href="/games/russiancards2/"
+                        aria-label="Открыть страницу игры Русские Карты 2"
+                        class="nav-link link fs-5">«Русские Карты 2»</a></li>
+                <li class="nav-item mb-2"><a href="/games/rememberthesecards"
+                        aria-label="Открыть страницу игры Запомни эти карты"
+                        class="nav-link link fs-5">«Запомни эти карты»</a></li>
+                <li class="nav-item mb-2"><a href="/games/babkaonthehunt/"
+                        aria-label="Открыть страницу игры Бабушка на охоте"
+                        class="nav-link link fs-5">Babka On The Hunt</a></li>
+                <li class="nav-item mb-2"><a href="/games/sweetness" aria-label="Открыть страницу игры Sweetness"
+                        class="nav-link link fs-5">Sweetness</a></li>
+            </ul>
+        </div>
+
+        <div class="col mb-4">
+            <h4 class="footer--text-head mb-2" style="padding-left: 17px;">Соцсети</h4>
+            <ul class="nav flex-column">
+                <li class="nav-item mb-2"><a href="//t.me/creagoo" target="_blank"
+                        aria-label="Открыть страницу Creagoo в телеграме"
+                        class="nav-link link fs-5">Телеграм</a></li>
+                <li class="nav-item mb-2"><a href="//vk.com/creagoo" target="_blank"
+                        aria-label="Открыть паблик вконтакте Creagoo"
+                        class="nav-link link fs-5">Вконтакте</a></li>
+                <li class="nav-item mb-2"><a href="https://yandex.ru/games/search?query=creagoo" target="_blank"
+                        aria-label="Creagoo Яндекс Игры" class="nav-link link fs-5">Яндекс Игры</a></li>
+                <li class="nav-item mb-2"><a href="//creagoo.itch.io" target="_blank"
+                        aria-label="Страница Creagoo на itch.io" class="nav-link link fs-5">itch.io</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</footer>
+
+<!-- <footer role="contentinfo" class="footer--main">
     <div class="container container--main">
         <div class="container mb-4 text-center">
             <div class="d-flex footer--adaptive-bottom flex-wrap">
@@ -113,7 +176,7 @@
             © «Special», 2023
         </p>
     </div>
-</footer>
+</footer> -->
 
 <script src="/js/theme.js"></script>
 <script src="/js/privacy.js"></script>
